update schedule and slides

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -359,6 +359,7 @@
 				<div class="date">Tue, Feb 22</div>
 				<div class="topic">
 					Commercial Content Moderation<BR>
+					[<a href="../slides/Day-15.pdf" target="_blank">Slides</a>]
 				</div>
 				<div class="links">
 					<P>
@@ -381,7 +382,8 @@
 				<div class="week"></div>
 				<div class="date">Thur, Feb 24</div>
 				<div class="topic">
-					Community Norms<BR>
+					Community Moderation<BR>
+					[<a href="../slides/Day-16.pdf" target="_blank">Slides</a>]
 					</div>
 				<div class="links">
 					<P>
@@ -421,15 +423,15 @@
 				<div class="week"></div>
 				<div class="date">Thur, Mar 3</div>
 				<div class="topic">
-					Alternative Systems<BR>
+					Designing AI for Communities<BR>
 				</div>
 				<div class="links">
 					<P>
-						Fiesler,Casey. "Gift Logic: Labors of love flourish online under fandom’s social norms." 2021.
-						[<a href="../readings/W9S2/gift-logic-labors-of-love-flourish-online-under-fandoms-social-norms.pdf" target="_blank">pdf</a>]
+						Matsakis, Louise. "Tumblr's Porn-Detecting AI Has One Job—and It's Bad at It." 2018.
+						[<a href="../readings/W9S2/tumblr-porn-ai-adult-content.pdf" target="_blank">pdf</a>]
 					</P>
 					<p>
-						Kazemi, Darius. "Run your own social: HOw to run a small social network site for your friends." 2019. [<a href="https://runyourown.social/" target="_blank">link</a>]
+						Simonite, Tom. "Facebook Is Everywhere; Its Moderation Is Nowhere Close." 2021. [<a href="../readings/W9S2/facebooks-global-reach-exceeds-linguistic-grasp.pdf" target="_blank">pdf</a>]
 					</p>
 					<!-- <p>
 						Gardels, Nathan. "The Frontiers Of Digital Democracy." 2021.
