supload slides and update acknowledgement

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -292,7 +292,8 @@
 				Steven Dow's <a href="https://socialcomputing.ucsd.edu/">Social Computing</a> course at UCSD,
 				Juho Kim's <a href="https://www.kixlab.org/courses/cs473-fall-2019/index.html">Introduction to Social Computing</a> course at KAIST,
 				Michael Bernstein's <a href="http://cs278.stanford.edu/">Social Computing</a> course at Stanford,
-				and Andres Monroy Hernandez's <a href="https://hci.princeton.edu/social-computing-seminar/">Social Computing Seminar</a> course at Princeton.
+				Andres Monroy Hernandez's <a href="https://hci.princeton.edu/social-computing-seminar/">Social Computing Seminar</a> course at Princeton
+				and Haiyi Zhu's and Steven Wu's <a href="https://haiicmu.github.io/">Human-AI Interaction</a> course at CMU.
 
 				</P>
 
