--- a/schedule/index.html
+++ b/schedule/index.html
@@ -403,6 +403,7 @@
 				<div class="date">Tue, Mar 1</div>
 				<div class="topic">
 					Public Interest Tech<BR>
+					[<a href="../slides/Day-17.pdf" target="_blank">Slides</a>]
 				</div>
 				<div class="links">
 					<P>
@@ -424,6 +425,7 @@
 				<div class="date">Thur, Mar 3</div>
 				<div class="topic">
 					Designing AI for Communities<BR>
+					[<a href="../slides/Day-18.pdf" target="_blank">Slides</a>]
 				</div>
 				<div class="links">
 					<P>
