fix typos and style

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -249,7 +249,7 @@
 				<h2 >Grading</h2>
 				<div class="subsection" id="pointbreakdown"  data-href="index.html#pointbreakdown" data-level="1" class="side-nav-header">
 					<h3>Point Breakdown</h3>
-					10%: Attendance and participation in class
+					10%: Attendance and participation in class<BR>
 					5%: Reading annotations<BR>
 					13%: Five individual assignments<BR>
 					72%: Research project: <BR>
